# mailers

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .tool-versions  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml
examples/: attachments.py  basic.py  cssliner.py  custom_protocols.py  custom_transport.py  custom_transport_url.py  dkim_signature.py  embedded.py  html.py  html_body.py  inline_attachments.py  plugins.py  templates.py  text.py
examples/templates/: mail.html
mailers/: __init__.py  config.py  delivery.py  exceptions.py  factories.py  importer.py  mailer.py  message.py  plugins.py  pytest_plugin.py  result.py  shortcuts.py  templated_mail.py  transports.py
mailers/encrypters/: __init__.py  base.py
mailers/plugins/: __init__.py  base.py  dkim.py  jinja_renderer.py
mailers/preprocessors/: __init__.py  cssliner.py  remove_html_comments.py
mailers/signers/: __init__.py  base.py  dkim.py
mailers/transports/: __init__.py  base.py  console.py  file.py  memory.py  multi.py  null.py  smtp.py  stream.py
scripts/: lint  publish  test
tests/: conftest.py  test_address_list.py  test_attachments.py  test_configure.py  test_delivery.py  test_email_url.py  test_factories.py  test_importer.py  test_jinja_templates.py  test_mailer.py  test_mailer_registry.py  test_message.py  test_plugins.py  test_shortcuts.py  test_templated_mailer.py  test_transport_factory.py  test_transports.py
tests/plugins/: test_dkim.py
tests/preprocessors/: test_cssinliner.py  test_html_comments_removal.py
tests/signers/: test_dkim_signer.py
tests/templates/: mail.html  mail.txt
tests/transports/: test_console.py  test_file.py  test_memory.py  test_multi.py  test_null.py  test_smtp.py  test_stream.py
