[tool.poetry]
name = "mailers"
version = "0.0.1"
description = "Email delivery for asyncio."
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = './README.md'
homepage = 'https://github.com/alex-oleshkevich/mailers'
repository = 'https://github.com/alex-oleshkevich/mailers.git'
keywords = ['asyncio', 'email', 'mailer', 'mail']
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
aiosmtplib = "^1.1"
aiofiles = {version = "^0.4.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-asyncio = "^0.10.0"
aiosmtpd = "^1.2"
coverage = "^4.5"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8"
mypy = "^0.740.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
isort = "^4.3"

[tool.poetry.extras]
aiofiles = ["aiofiles"]
full = ["aiofiles"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
