[tool.poetry]
name = "mailers"
version = "3.0.0"
description = "Email delivery for asyncio."
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = 'https://github.com/alex-oleshkevich/mailers'
repository = 'https://github.com/alex-oleshkevich/mailers.git'
documentation = "https://github.com/alex-oleshkevich/mailers"
keywords = ['asyncio', 'email', 'mailer', 'mail']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
aiosmtplib = { version = "^2.0", optional = true }
dkimpy = { version = "^1.0", optional = true }
anyio = "^3.3.0"
jinja2 = { version = "^3.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
aiosmtpd = "^1.4"
pytest-sugar = "*"
pytest-cov = "*"
mypy = "*"
dkimpy = "^1"
jinja2 = "^3"
aiosmtplib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
toronado = "^0.1.0"

[tool.poetry.extras]
jinja2 = ["jinja2"]
smtp = ["aiosmtplib"]
dkim = ["dkimpy"]

[tool.poetry.plugins.pytest11]
mailers = "mailers.pytest_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
line_length = 120
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_standard_library = "dataclasses,typing_extensions"
known_first_party = "mailers"
known_third_party = ["pkg_resources", "toml"]
known_future_library = "__future__"
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.coverage.run]
branch = true
source = ["mailers"]
omit = ["tests/*", ".venv/*", "*/__main__.py", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]


[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["mailers", "tests"]
exclude = "/*venv/"
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
