[tool.poetry]
name = "mailers"
version = "3.1.0"
description = "Email delivery for asyncio."
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = 'https://github.com/alex-oleshkevich/mailers'
repository = 'https://github.com/alex-oleshkevich/mailers.git'
documentation = "https://github.com/alex-oleshkevich/mailers"
keywords = ['asyncio', 'email', 'mailer', 'mail']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
aiosmtplib = { version = "^3.0", optional = true }
dkimpy = { version = "^1.0", optional = true }
anyio = ">=3.7.1,<5"
jinja2 = { version = "^3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "*"
aiosmtpd = "^1.4"
pytest-sugar = "*"
pytest-cov = "*"
mypy = "*"
dkimpy = "^1"
jinja2 = "^3"
aiosmtplib = "*"
pytest = "^8.0"
toronado = "^0.1.0"

[tool.poetry.extras]
jinja2 = ["jinja2"]
smtp = ["aiosmtplib"]
dkim = ["dkimpy"]

[tool.poetry.plugins.pytest11]
mailers = "mailers.pytest_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["mailers"]
omit = ["tests/*", ".venv/*", "*/__main__.py", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]


[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["mailers", "tests"]
exclude = "/*venv/"
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
